Fixed spacing and background colors for nav links.

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ header h1 {
 }
 
 header div {
+    background-color: #677A8E;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,6 +35,8 @@ header div {
 }
 
 header div ul {
+    background-color: #677A8E;
+    display: inline-block;
     list-style-type: none;
 }
 
@@ -218,11 +221,26 @@ footer {
 
 /* styling samples for phones */
 
-@media screen and (max-width: 847px) {
+@media screen and (max-width: 786px) {
     .sampleitem {
         border: 2px solid #23B5D3;
         margin: 10px;
         width: 95%;
+    }
+
+    header div {
+        background-color: #677A8E;
+        padding-top: 15px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        float: none;
+
     }
 
     #contact div {
@@ -236,5 +254,15 @@ footer {
     .subjectmain ul li {
         display: block;
         padding: 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    header div ul li {
+        margin: 0px;
+    }
+    
+    header a {
+        padding: 5px;
     }
 }
